# RoboticArm

./: Setup.md
install/: local_setup.sh  setup.sh
install/ur/share/ur/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ur_bringup/lib/ur_bringup/: start_ursim.sh
install/ur_bringup/share/ur_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ur_calibration/include/ur_calibration/: calibration.hpp  calibration_consumer.hpp
install/ur_calibration/lib/ur_calibration/: calibration_correction
install/ur_calibration/share/ur_calibration/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ur_controllers/include/ur_controllers/: force_mode_controller.hpp  force_mode_controller_parameters.hpp  freedrive_mode_controller.hpp  freedrive_mode_controller_parameters.hpp  gpio_controller.hpp  gpio_controller_parameters.hpp  passthrough_trajectory_controller.hpp  passthrough_trajectory_controller_parameters.hpp  scaled_joint_trajectory_controller.hpp  scaled_joint_trajectory_controller_parameters.hpp  speed_scaling_state_broadcaster.hpp  speed_scaling_state_broadcaster_parameters.hpp  ur_configuration_controller.hpp  ur_configuration_controller_parameters.hpp
log/: latest_build
src/weld_path_planner/: CMakeLists.txt  package.xml
src/weld_path_planner/config/: waypoints.csv
src/weld_path_planner/include/weld_path_planner/: waypoint_parser.hpp
src/weld_path_planner/src/: waypoint_executor.cpp
(+640 files in other folders)
